--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,8 +4,9 @@
     font-family: Arial, Helvetica, sans-serif
 }
 
-body {
+main {
     background-color: #e3f3fa;
+    min-height: 80vh;
 }
 
 nav {
@@ -22,7 +23,7 @@ nav {
     background-color: var(--accent-color);
     color: var(--shadow-color);
     padding: 0px 10px 0px 80px;
-    font-weight:bold;
+    font-weight: bold;
     font-size: 1.5em
 }
 
@@ -32,10 +33,10 @@ nav {
     text-align: right;
     color: var(--accent-color);
     margin-right: 80px;
-    text-decoration:underline rgb(32, 155, 217);
+    text-decoration: underline rgb(32, 155, 217);
 }
 
-#links h1{
+#links h1 {
     padding: 0px 15px;
     color: var(--accent-color);
     text-decoration: underline;
@@ -43,12 +44,28 @@ nav {
 }
 
 #links h1:visited {
-    color:var(--accent-color);
+    color: var(--accent-color);
     text-decoration: none;
 }
 
 #links h1:hover {
-    color:white;
+    color: white;
     text-decoration: underline;
     text-decoration-color: white;
+}
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bottom {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--shadow-color);
+    align-items: center;
+    justify-content: space-around;
+    font-size: .75em;
+    padding: 10px 0px;
 }
