--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,7 @@
 :root {
     --accent-color: rgb(32, 155, 217);
     --shadow-color: rgb(50, 50, 50);
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
 main {
